# Banki-Builder

./: README.md
GameExtension/: Banki.cpp  BankiEdit.sln
GamePatcher/: 00addtextures.csx  00extension.csx  20functions.csx  40commandhandle.csx  70editorroom.csx  80functions.csx  80ilovebeer.csx  90password.csx  90patches.csx  95fonts.csx  common.csx  player.draw.gml  player.step.gml
Installer/: Cargo.toml  build.rs
Installer/src/: backend.rs  install.rs  main.rs  uninstall.rs
Installer/ui/: app-window.slint
LocalServer/: Cargo.toml
LocalServer/src/: main.rs
LocalServer/src/controller/: bg.rs  command_handler.rs  config.rs  control_settings.rs  event.rs  font.rs  fs.rs  game_object.rs  global_state.rs  im.rs  internal_command.rs  mod.rs  mod_input.rs  raw_input.rs  sound.rs  sprite.rs  undo.rs
LocalServer/src/controller/level/: chandelier.rs  database.rs  extra_head.rs  flipper.rs  ground_decoration.rs  metadata.rs  mochi.rs  mod.rs  moving_platform.rs  onmyoudama_crawl.rs  onmyoudama_shoot.rs  simple_object.rs  structure.txt  symbol.rs  tag.rs  teleporter.rs  tile_manager.rs  tile_split.rs  warp.rs
LocalServer/src/controller/loc/: data.rs  mod.rs  tag_data.rs
LocalServer/src/controller/menu/: error.rs  main_menu.rs  mod.rs  not_in_editor.rs  play.rs  pre_publish.rs  publish.rs  setup_menu.rs  shape.rs
LocalServer/src/controller/menu/editor/: context_menu.rs  controls.rs  mod.rs  t_cannon.rs  t_chandelier.rs  t_cursor.rs  t_delete.rs  t_extra_head.rs  t_flipper.rs  t_mochi.rs  t_move.rs  t_onmyoudama_crawl.rs  t_onmyoudama_shoot.rs  t_paired_object.rs  t_pan.rs  t_select.rs  t_simple_object.rs  t_spike.rs  t_symbol.rs  t_tile.rs  t_tile_split.rs  t_undo.rs  tool.rs  tool_icon.rs  ui_top_bar.rs
LocalServer/src/controller/net/: level.rs  mod.rs  openid.rs  user.rs
RemoteServer/: Cargo.toml
RemoteServer/src/: auth.rs  download_level.rs  log.rs  main.rs  open_id.html  publish_level.rs  search_levels.rs  set_time.rs  set_vote.rs  time.rs  unpublish_level.rs  update_user_properties.rs  user.rs
common/: Cargo.toml
common/src/: auth.rs  download_level.rs  get_steam_openid_link.rs  id.rs  is_token_pending.rs  lib.rs  publish_level.rs  search_levels.rs  set_time.rs  set_vote.rs  unpublish_level.rs  update_user_properties.rs
