[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
cab = { path = "../rust-cab" }
minreq = { version = "2.13.4", features = ["https"] }
open = "5.3.2"
rfd = "0.15.3"
sha256 = { version = "1.6.0", default-features = false }

# [target.'cfg(windows)'.dependencies]
windows-registry = "0.5.1"

[target.'cfg(not(windows))'.dependencies]
dirs = "6.0.0"
slint = { version = "1.8.0", default-features = false, features = ["backend-winit-x11", "compat-1-2", "std", "renderer-software"] }

[target.'cfg(windows)'.dependencies]
slint = "1.8.0"

[build-dependencies]
slint-build = "1.8.0"
winresource = "0.1.20"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
