[package]
name = "banki-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.68"
lazy_static = "1.4.0"
bincode = "2.0.1"
flate2 = "1.0.25"
uuid = { version = "1.3.0", features = ["v4"] }
mouse_position = "0.1.4"
rand = "0.8.5"
smallvec = { version = "1.13.2", features = ["const_new"] }
base64 = "0.22.1"
copypasta = "0.10.1"
banki-common = { path = "../common" }
reqwest = { version = "0.12.15", optional = true }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
webbrowser = "1.0.4"
rfd = { version = "0.15.3", features = ["tokio", "xdg-portal"], default-features = false }
port_check = "0.2.1"
hex = "0.4.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Threading"] }
rdev = "0.5.3"

[features]
default = ["dep:reqwest"]
verify = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
#panic = "abort"
strip = true
